# agent-mana

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
